--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0.0",
     "eslint-config-custom": "*",
-    "prettier": "^2.5.1",
+    "prettier": "^3.0.0",
     "turbo": "latest"
   },
   "name": "moviecrew-front-monorepo",
