--- a/packages/movies/tsconfig.json
+++ b/packages/movies/tsconfig.json
@@ -1,12 +1,12 @@
 {
-    "extends": "tsconfig/base.json",
-    "compilerOptions": {
-        "baseUrl": "./src",
-        "paths": {
-            "@movies/*": ["*"]
-        },
-        "module": "ESNext",
-        "target": "es6",
-        "resolveJsonModule": true,
-    }
+  "extends": "tsconfig/base.json",
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@movies/*": ["*"]
+    },
+    "module": "ESNext",
+    "target": "es6",
+    "resolveJsonModule": true
+  },
 }
