--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write . --end-of-line auto"
   },
   "engines": {
     "node": ">=16.0.0"
