--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/parser": "^6.4.0",
     "add": "^2.0.6",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "^1.9.3",
     "eslint-import-resolver-typescript": "^3.6.0",
