--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "eslint.workingDirectories": [{ "pattern": "./packages/*/" }]
+  "eslint.workingDirectories": [
+    {
+      "pattern": "./packages/*/"
+    }
+  ],
+  "prettier.trailingComma": "all"
 }
