--- a/packages/moviecrew-api/tsconfig.json
+++ b/packages/moviecrew-api/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
-      "@movies/*": ["*"]
+      "@movies/*": ["movies/*"],
+      "@ratings/*": ["rating/*"]
     },
     "module": "ESNext",
     "target": "es6",
