feat(moviecrew-api): 🎸 get spectator

--- a/packages/moviecrew-api/tsconfig.json
+++ b/packages/moviecrew-api/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@movies/*": ["movies/*"],
       "@ratings/*": ["ratings/*"],
-      "@users/*": ["users/*"]
+      "@users/*": ["users/*"],
+      "@spectators/*": ["spectators/*"]
     },
     "module": "ESNext",
     "target": "es6",
