--- a/packages/moviecrew-api/package.json
+++ b/packages/moviecrew-api/package.json
@@ -33,7 +33,8 @@
     "moduleNameMapper": {
       "@movies/(.*)$": "<rootDir>/src/movies/$1",
       "@ratings/(.*)$": "<rootDir>/src/ratings/$1",
-      "@users/(.*)$": "<rootDir>/src/users/$1"
+      "@users/(.*)$": "<rootDir>/src/users/$1",
+      "@spectators/(.*)$": "<rootDir>/src/spectators/$1"
     }
   }
 }
