feat(moviecrew-api): 🎸 fetch authentication token

--- a/packages/moviecrew-api/package.json
+++ b/packages/moviecrew-api/package.json
@@ -34,7 +34,8 @@
       "@movies/(.*)$": "<rootDir>/src/movies/$1",
       "@ratings/(.*)$": "<rootDir>/src/ratings/$1",
       "@users/(.*)$": "<rootDir>/src/users/$1",
-      "@spectators/(.*)$": "<rootDir>/src/spectators/$1"
+      "@spectators/(.*)$": "<rootDir>/src/spectators/$1",
+      "@auth/(.*)$": "<rootDir>/src/auth/$1"
     }
   }
 }
