--- a/packages/moviecrew-api/package.json
+++ b/packages/moviecrew-api/package.json
@@ -19,7 +19,9 @@
     "tsconfig": "*"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.3",
     "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
