chore(test): 🤖 add test script

--- a/packages/moviecrew-api/tsconfig.json
+++ b/packages/moviecrew-api/tsconfig.json
@@ -4,10 +4,15 @@
     "baseUrl": "./src",
     "paths": {
       "@movies/*": ["movies/*"],
+      "@movies":["movies/index.ts"],
       "@ratings/*": ["ratings/*"],
+      "@ratings":["ratings/index.ts"],
       "@users/*": ["users/*"],
+      "@users":["users/index.ts"],
       "@spectators/*": ["spectators/*"],
+      "@spectators":["spectators/index.ts"],
       "@auth/*": ["auth/*"],
+      "@auth":["auth/index.ts"]
     },
     "module": "ESNext",
     "target": "es6",
