--- a/packages/moviecrew-api/package.json
+++ b/packages/moviecrew-api/package.json
@@ -6,7 +6,8 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest --coverage --verbose --colors",
+    "test-watch": "jest --watch",
     "lint": "eslint . --ext .ts",
     "build": "tsc"
   },
