--- a/packages/moviecrew-api/package.json
+++ b/packages/moviecrew-api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "contain all movie related data features",
   "private": true,
-  "main": "index.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "type": "module",
   "scripts": {
     "test": "jest --coverage --verbose --colors",
