feat(moviecrew-discordbot): 🎸 movie list command

--- a/apps/moviecrew-discordbot/tsconfig.json
+++ b/apps/moviecrew-discordbot/tsconfig.json
@@ -8,7 +8,7 @@
     "outDir": "build",
     "emitDecoratorMetadata": false, // required
     "experimentalDecorators": true, // required
-    "importHelpers": true // required
+    "importHelpers": true // required,
   },
   "references": [{ "path": "../../packages/moviecrew-api" }]
 }
