--- a/apps/moviecrew-discordbot/package.json
+++ b/apps/moviecrew-discordbot/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "SET NODE_ENV=development && ts-node --esm ./src/index.ts",
+    "dev": "SET NODE_ENV=development && ts-node --experimental-specifier-resolution=node --esm ./src/index.ts",
     "build": "tsc",
     "test": "jest --coverage --verbose --colors",
-    "test-watch": "jest --watch"
+    "test-watch": "jest --watch",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
     "@discordx/importer": "^1.2.3",
+    "@discordx/pagination": "^3.4.1",
     "discord.js": "^14.13.0",
     "discordx": "^11.7.6",
     "dotenv": "^16.3.1",
@@ -23,5 +25,13 @@
     "ts-node": "^10.9.1",
     "tsconfig": "*",
     "typescript": "^5.2.2"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true,
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    }
   }
 }
