--- a/apps/moviecrew-discordbot/package.json
+++ b/apps/moviecrew-discordbot/package.json
@@ -7,7 +7,8 @@
     "dev": "SET NODE_ENV=development && ts-node --esm ./src/index.ts",
     "build": "tsc",
     "test": "jest --coverage --verbose --colors",
-    "test-watch": "jest --watch"
+    "test-watch": "jest --watch",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
     "@discordx/importer": "^1.2.3",
@@ -23,5 +24,13 @@
     "ts-node": "^10.9.1",
     "tsconfig": "*",
     "typescript": "^5.2.2"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true,
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    }
   }
 }
