fix(moviecrew-api): 🐛 export types and errors

--- a/apps/moviecrew-discordbot/tsconfig.json
+++ b/apps/moviecrew-discordbot/tsconfig.json
@@ -9,5 +9,6 @@
     "emitDecoratorMetadata": false, // required
     "experimentalDecorators": true, // required
     "importHelpers": true // required
-  }
+  },
+  "references": [{ "path": "../../packages/moviecrew-api" }]
 }
