refactor(moviecrew-api): 💡 remove alias, because too much complexity on build
in a monorepo context it seems difficult to import repo that use
aliases. It will be necessary to refactor in the futur and add aliases

BREAKING CHANGE: 🧨 no more alias inport inside the repo

--- a/packages/moviecrew-api/package.json
+++ b/packages/moviecrew-api/package.json
@@ -27,17 +27,12 @@
   },
   "jest": {
     "verbose": true,
-    "collectCoverage": true,
     "testEnvironment": "node",
     "transform": {
       "^.+\\.ts?$": "ts-jest"
     },
-    "moduleNameMapper": {
-      "@movies/(.*)$": "<rootDir>/src/movies/$1",
-      "@ratings/(.*)$": "<rootDir>/src/ratings/$1",
-      "@users/(.*)$": "<rootDir>/src/users/$1",
-      "@spectators/(.*)$": "<rootDir>/src/spectators/$1",
-      "@auth/(.*)$": "<rootDir>/src/auth/$1"
-    }
+    "roots": [
+      "<rootDir>/src"
+    ]
   }
 }
