--- a/packages/moviecrew-api/package.json
+++ b/packages/moviecrew-api/package.json
@@ -30,6 +30,11 @@
     "testEnvironment": "node",
     "transform": {
       "^.+\\.ts?$": "ts-jest"
-    }
+    },
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/",
+      "<rootDir>/src/config/"
+    ]
   }
 }
