--- a/apps/moviecrew-discordbot/package.json
+++ b/apps/moviecrew-discordbot/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@discordx/importer": "^1.2.3",
     "@discordx/pagination": "^3.4.1",
+    "@discordx/utilities": "^6.0.0",
     "discord.js": "^14.13.0",
     "discordx": "^11.7.6",
     "dotenv": "^16.3.1",
