--- a/apps/moviecrew-discordbot/package.json
+++ b/apps/moviecrew-discordbot/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "SET NODE_ENV=development && ts-node --experimental-specifier-resolution=node --esm ./src/index.ts",
+    "dev": "SET NODE_ENV=development && tsx ./src/index.ts",
     "build": "tsc",
     "test": "jest --coverage --verbose --colors",
     "test-watch": "jest --watch",
