--- a/apps/moviecrew-discordbot/package.json
+++ b/apps/moviecrew-discordbot/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
+    "tsx": "^4.19.1",
     "typescript": "^5.2.2"
   },
   "jest": {
