chore: 🤖 add deploy and sonarqube to workflow

--- a/apps/moviecrew-discordbot/tsconfig.json
+++ b/apps/moviecrew-discordbot/tsconfig.json
@@ -12,5 +12,5 @@
     "declarationDir": "./dist"
   },
   "references": [{ "path": "../../packages/moviecrew-api" }],
-   "exclude": ["dist", "node_modules", "test"],
+   "exclude": ["dist", "node_modules"],
 }
