--- a/packages/moviecrew-api/tsconfig.json
+++ b/packages/moviecrew-api/tsconfig.json
@@ -9,5 +9,5 @@
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
-  "exclude": ["dist", "node_modules", "test"],
+  "exclude": ["dist", "node_modules"],
 }
