feat(moviecrew-api): 🎸 reauth and retry if 401

--- a/packages/moviecrew-api/tsconfig.json
+++ b/packages/moviecrew-api/tsconfig.json
@@ -9,6 +9,6 @@
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
-  "include": ["test/**/*.json", "test/**/*.ts", "src/**/*.json", "src/**/*.ts"],
+  "include": ["test/**/*.json", "test/**/*.ts", "src/**/*.json", "src/**/*.ts", "shared/handleError.ts"],
   "exclude": ["dist", "node_modules"],
 }
